gui field bug fix